<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inicus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Home_Add_Event">+</string>
    <string name="Home_Remove_Event">-</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_add__event">Add_Event</string>
    <string name="Add_Event_Event_Title">What was the Event of the day ?</string>
    <string name="Add_Event_Event_Details">Enter details of the Event</string>
    <string name="Add_Event_add_event">Submit</string>
    <string name="Navigate_Home">navigate_home</string>
    <string name="Home_Search">Search</string>
    <string name="Home_Overflow">More</string>
    <string name="Home_More_Settings">Settings</string>

</resources>
