<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Add_Event" >

    <EditText
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/Add_Event_Event_Title" />

    <EditText
        android:id="@+id/eventDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventTitle"
        android:layout_below="@+id/eventTitle"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/Add_Event_Event_Details"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventDetails"
        android:layout_below="@+id/eventDetails"
        android:layout_marginTop="82dp"
        android:onClick="sendEvent"
        android:text="@string/Add_Event_add_event" />

</RelativeLayout>
